# motadata-AI-sdk-2.0

./: .coveragerc  .gitattributes  .gitignore  ARCHITECTURE.md  CORE_COMPONENTS.md  DEVELOPMENT_EXTENSIONS.md  LICENSE  MANIFEST.in  README.md  REMAINING_GAPS.md  VALIDATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
src/: README.md  __version__.py
src/agents/: README.md  __init__.py  agent.py  agent_communication.py
src/ai_gateway/: README.md  __init__.py  gateway.py  input_output.py  model_integration.py  prompt_manager.py
src/api/: README.md  __init__.py  api_communicator.py  api_methods.py  authentication.py
src/codecs/: README.md  __init__.py  codec_utils.py  custom_codec.py
src/config/: README.md  __init__.py  logging.py  observability.py  settings.py
src/core/: README.md  __init__.py  concurrency.py  data_structures.py  event_handler.py  exceptions.py  utils.py  validators.py
src/database/: README.md  __init__.py  no_sql_db.py  sql_db.py  vector_db.py
src/tests/: README.md  __init__.py  conftest.py  test_agents.py  test_ai_gateway.py  test_api.py  test_codecs.py  test_database.py
